# django-aws-azuread

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/config/settings/: base.py  development.py  production.py
app/core/: apps.py  views.py
app/core/templates/core/: index.html
