[project]
name = "django-aws-azuread"
version = "0.1.0"
description = "Django web application on AWS with Azure AD authentication, provisioned via Terraform."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "SIM",  # flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["config", "core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"